Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-582

impalad crashes on 10-node cluster run executing tpcds-insert workload @ FvnHash (this=0x6db63c0, state=<value optimized out>, batch=0x568bef0, eos=<value optimized out>) at hash-util.h:81

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 1.2
    • Impala 1.2
    • None
    • None

    Description

      impalad crashes on 10-node cluster run executing tpcds-insert workload. This happened on 2/10 nodes.

      #13 0x00007f927fc500e5 in JVM_handle_linux_signal () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so
      #14 0x00007f927fc4c3ee in signalHandler(int, siginfo*, void*) () from /usr/java/jdk1.6.0_31/jre/lib/amd64/server/libjvm.so
      #15 <signal handler called>
      #16 FvnHash (this=0x6db63c0, state=<value optimized out>, batch=0x568bef0, eos=<value optimized out>) at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/util/hash-util.h:81
      #17 GetHashValueFvn (this=0x6db63c0, state=<value optimized out>, batch=0x568bef0, eos=<value optimized out>) at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/runtime/raw-value.h:174
      #18 impala::DataStreamSender::Send (this=0x6db63c0, state=<value optimized out>, batch=0x568bef0, eos=<value optimized out>)
          at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/runtime/data-stream-sender.cc:415
      #19 0x00000000007cd15a in impala::PlanFragmentExecutor::OpenInternal (this=0x74386b8) at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/runtime/plan-fragment-executor.cc:284
      #20 0x00000000007cd9db in impala::PlanFragmentExecutor::Open (this=0x74386b8) at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/runtime/plan-fragment-executor.cc:250
      #21 0x00000000006961ed in impala::ImpalaServer::FragmentExecState::Exec (this=0x7438680) at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/service/impala-server.cc:235
      #22 0x000000000069d2eb in impala::ImpalaServer::RunExecPlanFragment (this=0x5835800, exec_state=0x7438680) at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/service/impala-server.cc:1375
      #23 0x0000000000756f0a in operator() (name="exec-plan-fragment-27107", category=<value optimized out>, functor=..., thread_started=0x7f922e9e62e0)
          at /usr/include/boost/function/function_template.hpp:1013
      #24 impala::Thread::SuperviseThread (name="exec-plan-fragment-27107", category=<value optimized out>, functor=..., thread_started=0x7f922e9e62e0)
          at /usr/src/debug/impala-1.2-SNAPSHOT/be/src/util/thread.cc:260
      #25 0x0000000000757790 in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, std::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, boost::function<void ()()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void ()()> >, boost::_bi::value<impala::Promise<long>*> > > >::run() ()
      #26 0x00000000009a9da4 in thread_proxy ()
      #27 0x0000003e482077f1 in start_thread () from /lib64/libpthread.so.0
      #28 0x0000003e47ae5ccd in clone () from /lib64/libc.so.6
      

      Coredumps and logs available:
      c2330.halxg.cloudera.com:/data/5/coredumps/1322

      Attachments

        Activity

          People

            nong_impala_60e1 Nong Li
            lskuff Lenni Kuff
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: