IMPALA-582, IMPALA-494: Fix parquet writer to allow multiple files per partition.

Added parquet_file_size query option.

Change-Id: I860dc8ab858622976402233229c365112bf081bc
Reviewed-on: http://gerrit.ent.cloudera.com:8080/477
Tested-by: jenkins
Reviewed-by: Nong Li <nong@cloudera.com>