common/thrift/ImpalaInternalService.thrift
@@ -60,6 +60,7 @@ struct TQueryOptions {
       Descriptors.THdfsCompression.SNAPPY
   15: optional i32 hbase_caching = 0
   16: optional bool hbase_cache_blocks = 0
+  17: optional i64 parquet_file_size = 0
 }
 
 // A scan range plus the parameters needed to execute that scan.
